@@ -1,5 +1,13 @@
 2007-05-18  Scott James Remnant  <scott@netsplit.com>
 
+	* init/event.c (event_copy): Use nih_str_array_copy here, to make the
+	code somewhat simpler.
+	(event_finished): Copy the arguments and environment from the old
+	event, rather than stealing and reparenting.
+	* init/job.c (job_copy): Use nih_str_array_copy here too.
+	(job_run_process): Use nih_str_array_append to add the arguments from
+	the emission onto the command run.
+
 	* TODO: Update.
 
 2007-04-24  Scott James Remnant  <scott@netsplit.com>
